[tool.poetry]
name = "discrete-radon-transform"
version = "0.1.0"
description = "This is naive imporlementation of Discrette Radon Transform algorithm"
authors = ["Denis Ivanov <denivsemik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
numpy = "^1.26.4"
desert = "^2022.9.22"
marshmallow = "^3.21.2"
opencv-python = "^4.9.0.80"

[tool.poetry.scripts]
drt = "discrete_radon_transform.console:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
coverage = {extras = ["toml"], version = "^7.5.1"}
pytest-cov = "^5.0.0"
safety = "^3.2.0"
black = "^24.4.2"
flake8 = "^7.0.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^24.4.26"
flake8-import-order = "^0.18.2"
mypy = "^1.10.0"
typeguard = "^4.2.1"
flake8-annotations = "^3.1.1"
flake8-docstrings = "^1.7.0"
darglint = "^1.8.1"
xdoctest = "^1.1.3"
sphinx = "^7.3.7"
sphinx-autodoc-typehints = "^2.1.0"
sphinx-rtd-dark-mode = "^1.3.0"
sphinx-rtd-theme = "^2.0.0"
nox = "^2024.4.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["discrete_radon_transform"]

[tool.coverage.report]
show_missing = true
